# lib-optional

./: .travis.yml  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: cmake.yml
include/lib-optional/: optional.hpp
test/: CMakeLists.txt  coverage.sh  main.cpp
